--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>G3-architects</title>
 </head>
+
 <body>
     <header>
+        <nav>
+            <h3 class="nav-title">G3 ARCHITECTS</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <h1 class="banner-title">Brand New Group of Architects
+            </h1>
+            <p class="banner-text">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">
+                Explore More
+            </button>
+        </div>
+        <img src="images/banner.png" alt="">
 
     </header>
 
@@ -19,4 +40,5 @@
 
     </footer>
 </body>
+
 </html>
