--- a/index.html
+++ b/index.html
@@ -22,18 +22,36 @@
         <div class="banner">
             <h1 class="banner-title">Brand New Group of Architects
             </h1>
-            <p class="banner-text">There are many variations of passages of Lorem Ipsum available, but the majority have
+            <p class="banner-text color">There are many variations of passages of Lorem Ipsum available, but the majority have
                 suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">
                 Explore More
             </button>
         </div>
         <img src="images/banner.png" alt="">
-
     </header>
 
     <main>
-
+        <div class="team">
+            <div class="team-pic">
+                <div>
+                    <img class="image-style" src="images/team1.png" alt="">
+                    <img class="image-style" src="images/team2.png" alt="">
+                </div>
+                <div>
+                    <img class="image-style" src="images/team3.png" alt="">
+                    <img class="image-style" src="images/team4.png" alt="">
+                </div>
+            </div>
+            <div class="team-text">
+                <h1 class="text-heading"><span class="color">
+                    Quick list
+                </span> of Our <br> <span class="span">Features</span> </h1>
+                <p class="color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </div>
     </main>
 
     <footer>
