Features part done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div class="banner">
             <h1 class="banner-title">Brand New Group of Architects
             </h1>
-            <p class="banner-text color">There are many variations of passages of Lorem Ipsum available, but the majority have
+            <p class="banner-text color">There are many variations of passages of Lorem Ipsum available, but the
+                majority have
                 suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">
                 Explore More
@@ -45,11 +46,49 @@
             </div>
             <div class="team-text">
                 <h1 class="text-heading"><span class="color">
-                    Quick list
-                </span> of Our <br> <span class="span">Features</span> </h1>
-                <p class="color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        Quick list
+                    </span> of Our <br> <span class="span">Features</span> </h1>
+                <p class="color">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered
                     alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
+            </div>
+        </div>
+
+        <div class="features-box">
+            <div class="features">
+                <h1 class="features-heading">Features you will <br>love & enjoy</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div>
+                    <div class="cart">
+                        <h4>Dexktop & Mobile Version</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="cart">
+                        <h4>Drag & Drop Builder</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="cart">
+                        <h4>Awesome Modern Design</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="cart">
+                        <h4>Super Easy to Edit</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+            <div class="experience">
+                <div class="experience-box">
+                    <h1>10+ Years</h1>
+                    <p>Experience</p>
+
+                </div>
             </div>
         </div>
     </main>
