--- a/index.html
+++ b/index.html
@@ -91,10 +91,55 @@
                 </div>
             </div>
         </div>
+
+        <div class="fact">
+            <div class="fact-heading">
+                <h1>Some Fact</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="progress-box color">
+                <div class="progress">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h1>54</h1>
+                    <h3>Award Winnings</h3>
+                </div>
+                <div class="progress">
+                    <img src="images/icons//projects.png" alt="">
+                    <h1>1458</h1>
+                    <h3>Project Finished</h3>
+                </div>
+                <div class="progress">
+                    <img src="images/icons/customers.png" alt="">
+                    <h1>590</h1>
+                    <h3>Clients Worked</h3>
+                </div>
+                <div class="progress">
+                    <img src="images/icons//email.png" alt="">
+                    <h1>22578</h1>
+                    <h3>E-mail Send</h3>
+                </div>
+            </div>
+
+        </div>
+
+        <section class="sponsors">
+            <div class="sponsors-details">
+                <h1>Our Sponsors</h1>
+                <p class="color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="company">
+                <img src="images/sponsors/spotify.png" alt=""> 
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
 
     <footer>
-
+        <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
