responsive for phone done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Explore More
             </button>
         </div>
-        <img src="images/banner.png" alt="">
+        <img class="banner-img" src="images/banner.png" alt="">
     </header>
 
     <main>
